examples/bad/12-static.emm
int x;

void p() {
  x = "abc";
}

int main () {
  string x;
  p();
  return 0;
}
